# pquirks

./: .gitignore  README.md
scripts/: build.sh  makerule.sh
src/: CMakeLists.txt  main.cpp
src/base/: CMakeLists.txt  Error.cpp  Error.h  Guess.cpp  Guess.h  History.cpp  History.h  Logging.h  Macro.h  Rule.cpp  Rule.h  String.cpp  String.h
src/rules/: CMakeLists.txt
